REGRESSION: WebAudio user-gesture restriction is no longer lifted by touchstart event https://bugs.webkit.org/show_bug.cgi?id=149367

Reviewed by Eric Carlson.

Use processingUserGestureForMedia() rather than processingUserGesture(),
as the former includes touchstart and the latter does not.

* Modules/webaudio/AudioContext.cpp:
(WebCore::AudioContext::willBeginPlayback):
(WebCore::AudioContext::willPausePlayback):
* html/MediaElementSession.cpp:
(WebCore::MediaElementSession::playbackPermitted):
(WebCore::MediaElementSession::dataLoadingPermitted):
(WebCore::MediaElementSession::fullscreenPermitted):
(WebCore::MediaElementSession::showPlaybackTargetPicker):


Canonical link: https://commits.webkit.org/167744@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190327 268f45cc-cd09-0410-ab3c-d52691b4dbfc